--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
         <div id="2-1" class="tile"></div>
         <div id="2-2" class="tile"></div>
     </div>
+
+    <a href="https://streamable.com/w52jck">länk till video</a>
     <script src="index.js"></script>
 </body>
 </html>
